[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsdiag"
version = "2.9.2"
description = "DNS Measurement, Troubleshooting and Security Auditing Toolset (ping, traceroute)"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Babak Farrokhi", email = "babak@farrokhi.net"}
]
keywords = ["dns", "traceroute", "ping", "performance"]
classifiers = [
    "Topic :: System :: Networking",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
dependencies = [
    "aioquic>=1.2.0",
    "cryptography>=42.0.5,<47",
    "cymruwhois>=1.6",
    "dnspython>=2.8.0",
    "h2>=4.1.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://dnsdiag.org/"
Repository = "https://github.com/farrokhi/dnsdiag"
Issues = "https://github.com/farrokhi/dnsdiag/issues"

[project.scripts]
dnsping = "dnsping:main"
dnstraceroute = "dnstraceroute:main"
dnseval = "dnseval:main"

[tool.setuptools]
packages = ["dnsdiag"]
py-modules = ["dnsping", "dnstraceroute", "dnseval"]

[tool.git-changelog]
convention = "basic"
in-place = true
marker-line = "<!-- insertion marker -->"
output = "CHANGELOG.md"
template = "path:.git-changelog-template.md.jinja"
parse-trailers = false

[tool.mypy]
python_version = "3.9"
mypy_path = "."
namespace_packages = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Strict type checking mode
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_unreachable = false
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = false

[[tool.mypy.overrides]]
module = ["cymruwhois", "dns.*", "httpx"]
ignore_missing_imports = true

[tool.flake8]
ignore = ["E501", "E741", "E128", "W504"]
exclude = [".venv"]

[tool.pycodestyle]
ignore = ["E501", "E741"]
